--- a/saitae-web/src/main/webapp/pages/agAdm.xhtml
+++ b/saitae-web/src/main/webapp/pages/agAdm.xhtml
@@ -17,7 +17,7 @@
                                    departamentoLista="#{administradorController.departamentoList}"
                                    dui="#{administradorController.dui}" municipio="#{administradorController.muni}" 
                                    municipioLista="#{administradorController.municipioList}"
-                                   listenerA="#{administradorController.onItemSelect2}" 
+                                   onItemSelect="#{administradorController.onItemSelect2}" 
                                    persona="#{administradorController.adm}"
                                    t="100" onComplete="#{axiliarController.completeText}"/>
                     </p:panel>
