--- a/saitae-web/src/main/webapp/pages/agregacion.xhtml
+++ b/saitae-web/src/main/webapp/pages/agregacion.xhtml
@@ -46,7 +46,7 @@
                                            dui="#{maestroController.dui}" municipio="#{maestroController.municipio}" 
                                            municipioLista="#{maestroController.municipiosLista}" 
                                            persona="#{maestroController.maestro.persona}"
-                                           listenerA="#{maestroController.setChange()}"
+                                           onItemSelect="#{maestroController.setChange()}"
                                            t="4" onComplete="#{axiliarController.completeText}"/>
                             </p:panel>
                         </p:tab>
