--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -181,8 +181,9 @@
                                         <f:facet name="input">
                                             <p:selectOneMenu value="#{g.gradoPK.gradoModalidad}">
                                                 <f:selectItem itemLabel="Seleccione" itemValue=""/>
-                                                <f:selectItem itemLabel="Comercio" itemValue="C"/>
+                                                <f:selectItem itemLabel="T.V.C. Contador" itemValue="C"/>
                                                 <f:selectItem itemLabel="General" itemValue="G"/>
+                                                <f:selectItem itemLabel="T.V.C. Secretariado" itemValue="S"/>
                                                 <f:validateLength minimum="1" />
                                             </p:selectOneMenu>
                                         </f:facet>
