--- a/saitae-web/src/main/webapp/pages/agAdm.xhtml
+++ b/saitae-web/src/main/webapp/pages/agAdm.xhtml
@@ -19,7 +19,7 @@
                                    municipioLista="#{administradorController.municipioList}"
                                    onItemSelect="#{administradorController.onItemSelect2}" 
                                    persona="#{administradorController.adm}"
-                                   t="100" onComplete="#{axiliarController.completeText}"/>
+                                   t="100" onComplete="#{axiliarController.completeTextAdm}"/>
                     </p:panel>
                 </p:tab>
                 <p:tab title="Contacto">
