--- a/saitae-web/src/main/webapp/pages/agregacion.xhtml
+++ b/saitae-web/src/main/webapp/pages/agregacion.xhtml
@@ -47,7 +47,7 @@
                                            municipioLista="#{maestroController.municipiosLista}" 
                                            persona="#{maestroController.maestro.persona}"
                                            onItemSelect="#{maestroController.setChange()}"
-                                           t="4" onComplete="#{axiliarController.completeText}"/>
+                                           t="4" onComplete="#{axiliarController.completeTextMae}"/>
                             </p:panel>
                         </p:tab>
                         <p:tab id="address" title="Contacto">
