parcialmente agregada la funcionalidad de nuevo ingreso.

--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -44,7 +44,8 @@
                 </f:facet>
                 <p:focus context="panel"/>
             </h:panelGrid>            
-            <p:barcode value="https://www.primefaces.org/showcase/ui/multimedia/barcode.xhtml" type="qr" width="300px" height="300px"/>
+            <p:barcode value="https://www.primefaces.org/showcase/ui/multimedia/barcode.xhtml" type="qr" 
+                       width="300px" height="300px" hrp="botton"/>
         </h:form>
     </h:body>   
 </html>
