derechos de copia agregados

--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Language" content="es-SV" />
         <title>SAITAE - INTEX #{loginController.year}</title>
         <f:event listener="#{loginController.preinit()}" type="preRenderView"/>
-        <link rel="Shortcut Icon" type="image/jpg" dir="rtl" href="intexM.jpeg"/>
+        <link rel="shortcut icon" href="resources/img/intexM.jpeg"/>
         <h:outputStylesheet library="css" name="main.css"/>
     </h:head>
     <h:body style="background-color: #191919; color: #ffffff">
