--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -11,99 +11,103 @@
         <link rel="shortcut icon" href="resources/img/intexM.jpeg"/>
         <h:outputStylesheet library="css" name="main.css"/>
     </h:head>
-    <h:body style="background-color: #191919; color: #ffffff">
+    <h:body style="background-color: #191919; color: #ffffff"  class="home">
         <style>
             .centred-form{
-                margin: 8% 45% 0% 35%;
+                margin: 8% auto;
                 align-content: center;
                 align-items: center;
             }
         </style>
-        <h:form id="frm" style="width: 200px; height: 200px;" styleClass="centred-form">
-            <p:growl id="growl" showDetail="true"/>
-            <p:focus context="panel"/>
-            <h:panelGrid id="panel" columns="3" summary="Inicio de sesión">
-                <p:column/>
-                <h:outputLabel value="SAITAE-INTEX #{loginController.year}"/>
-                <p:column/>
-
-                <h:outputLabel for="user" id="t1" value="Usuario: "/>
-                <p:inputText id="user" value="#{loginController.user}" required="true"
-                             requiredMessage="No deje vacío el campo usuario." alt="ingrese su NIE/DUI"/>
-                <p:message for="user" showSummary="true"/>
-
-                <h:outputLabel for="pass" value="Contraseña: "/>
-                <p:password id="pass" value="#{loginController.pass}" required="true" 
-                            requiredMessage="No deje vacío el campo contraseña."/>
-                <p:message for="pass" showSummary="true"/>
-
-                <p:column/>
-                <p:commandButton actionListener="#{loginController.login()}" value="Ingresar"/>
-                <p:column/>
-                <f:facet name="footer">
-                    <h:link value="Nuevo ingreso" outcome="pages/nuevoIngreso.intex"/>
-                </f:facet>
+        <h:form id="frm" style="width: 400px; height: 90%;" styleClass="centred-form">
+            <div class="ui-fluid">
+                <p:growl id="growl" showDetail="true"/>
                 <p:focus context="panel"/>
-            </h:panelGrid>
+                <h:panelGrid id="panel" columns="3" summary="Inicio de sesión">
+                    <p:column/>
+                    <h:outputLabel value="SAITAE-INTEX #{loginController.year}"/>
+                    <p:column/>
+
+                    <h:outputLabel for="user" id="t1" value="Usuario: "/>
+                    <p:inputText id="user" value="#{loginController.user}" required="true"
+                                 requiredMessage="No deje vacío el campo usuario." alt="ingrese su NIE/DUI"/>
+                    <p:message for="user" showSummary="true"/>
+
+                    <h:outputLabel for="pass" value="Contraseña: "/>
+                    <p:password id="pass" value="#{loginController.pass}" required="true" 
+                                requiredMessage="No deje vacío el campo contraseña."/>
+                    <p:message for="pass" showSummary="true"/>
+
+                    <p:column/>
+                    <p:commandButton actionListener="#{loginController.login()}" value="Ingresar"/>
+                    <p:column/>
+                    <f:facet name="footer">
+                        <h:link value="Nuevo ingreso" outcome="pages/nuevoIngreso.intex"/>
+                    </f:facet>
+                    <p:focus context="panel"/>
+                </h:panelGrid>
+            </div>
         </h:form>
-        <footer id="footer" class="top-space">
-            <div class="footer1">
-                <div class="container">
-                    <div class="row">
+        <div class="ui-fluid">
+            <div id="footer" class="top-space">
+                <div class="footer1">
+                    <div class="container">
+                        <div class="row">
 
-                        <div class="col-md-3 widget">
-                            <h3 class="widget-title">Contáctenos</h3>
-                            <div class="widget-body">
-                                <p>(+503) 2470-0219<br/>
-                                    <a href="mailto:#">instituto.texistepeque@gmail.com</a><br/>
-                                    <br/>
-                                    km 83 1/2 carretera CA 12-N colonia Monches y Herrera 00000 Texistepeque, Santa Ana, El Salvador.
-                                </p>	
+                            <div class="col-md-3 widget">
+                                <h3 class="widget-title">Contáctenos</h3>
+                                <div class="widget-body">
+                                    <p>(+503) 2470-0219<br/>
+                                        <p:link value="instituto.texistepeque@gmail.com"  href="mailto:instituto.texistepeque@gmail.com"/>
+                                        <br/>
+                                        <br/>
+                                        km 83 1/2 carretera CA 12-N colonia Monches y Herrera 00000 Texistepeque, Santa Ana, El Salvador.
+                                    </p>	
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-3 widget">
-                            <h3 class="widget-title">Nuestras Redes Sociales</h3>
-                            <div class="widget-body">
-                                <p class="follow-me-icons">
-                                    <a href=""><i class="fa fa-twitter fa-2"></i></a>
-                                    <a href=""><i class="fa fa-dribbble fa-2"></i></a>
-                                    <a href="https://m.me/intex.oficial"><i class="pi pi-comment"></i></a>
-                                    <a href="https://www.facebook.com/intex.oficial/"><i class="fa fa-facebook fa-2"></i></a>
-                                </p>	
+                            <div class="col-md-3 widget">
+                                <h3 class="widget-title">Nuestras Redes Sociales</h3>
+                                <div class="widget-body">
+                                    <p class="follow-me-icons">
+                                        <a href=""><i class="fa fa-twitter fa-2"></i></a>
+                                        <a href=""><i class="fa fa-dribbble fa-2"></i></a>
+                                        <a href="https://m.me/intex.oficial"><i class="pi pi-comment"></i></a>
+                                        <a href="https://www.facebook.com/intex.oficial/"><i class="fa fa-facebook fa-2"></i></a>
+                                    </p>	
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-6 widget">
-                            <h3 class="widget-title">Sobre nosotros</h3>
-                            <div class="widget-body">
-                                <p>Somos una institución de educación media formadora 
-                                    de alumnos con alto grado de conocimientos académicos, técnicos, 
-                                    morales y con profesionales especializados, permitiéndoles a 
-                                    los estudiantes la transformación de su realidad para desarrollarse satisfactoriamente en la vida.</p>
-                            </div> <!-- /row of widgets -->
-                        </div>
+                            <div class="col-md-3 widget">
+                                <h3 class="widget-title">Sobre nosotros</h3>
+                                <div class="widget-body">
+                                    <p>Somos una institución de educación media formadora 
+                                        de alumnos con alto grado de conocimientos académicos, técnicos, 
+                                        morales y con profesionales especializados, permitiéndoles a 
+                                        los estudiantes la transformación de su realidad para desarrollarse satisfactoriamente en la vida.</p>
+                                </div> 
+                            </div>
+                        </div><!-- /row of widgets -->
+                    </div>
+                </div>
+                <div class="footer2">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 widget">
+                                <div class="widget-body">
+                                    <p class="text-right">
+                                        Copyright &copy; 2020-2025, C.E. INTEX. Designed by 
+                                        <a href="https://www.facebook.com/gad.murcia" rel="designer">Guillermo Delsas</a> 
+                                        and
+                                        <a href="https://www.facebook.com/nathmenendez" rel="designer">Gabriela Menéndez</a> 
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div> <!-- /row of widgets -->
                     </div>
                 </div>
             </div>
-            <div class="footer2">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-md-6 widget">
-                            <div class="widget-body">
-                                <p class="text-right">
-                                    Copyright &copy; 2020-2025, C.E. INTEX. Designed by 
-                                    <a href="https://www.facebook.com/gad.murcia" rel="designer">Guillermo Delsas</a> 
-                                    and
-                                    <a href="https://www.facebook.com/nathmenendez" rel="designer">Gabriela Menéndez</a> 
-                                </p>
-                            </div>
-                        </div>
-
-                    </div> <!-- /row of widgets -->
-                </div>
-            </div>
-        </footer>
+        </div>
     </h:body>   
 </html>
