--- a/saitae-web/src/main/webapp/pages/recurso.xhtml
+++ b/saitae-web/src/main/webapp/pages/recurso.xhtml
@@ -137,7 +137,81 @@
                                          icon="pi pi-save" update="form:recurso form0:msgs"/>
 
                     </h:form>
+                    <p:growl id="growl" sticky="true" showDetail="true"/>
+
+                    <p:wizard flowListener="#{recursoController.onFlowProcess}">
+                        <div class="ui-g">
+                        <div class="ui-g-12">
+                            <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                             update=":form0:msgs h1"
+                                             onclick="PF('Dcontenido').show();"
+                                             title="Agregar Contenido."/>
+
+
+                        </div>
+                    </div>
+                        <p:tab id="temario" title="Contenido Libro">
+                            <p:panel header="Temario">
+                                <p:messages />
+                                <f:view>
+
+
+                                    <h:form>
+                                        <h1><h:outputText value="List"/></h1>
+                                        <p:dataTable value="#{recursoController.contenido}" var="item">
+                                            <p:column>
+                                                <f:facet name="header">
+                                                    <h:outputText value="ContenidoLibroNombre"/>
+                                                </f:facet>
+                                                <h:outputText value="#{item.contenidoLibroPK.contenidoLibroNombre}"/>
+                                            </p:column>
+                                            <p:column>
+                                                <f:facet name="header">
+                                                    <h:outputText value="ContenidoLibroPagina"/>
+                                                </f:facet>
+                                                <h:outputText value="#{item.contenidoLibroPK.contenidoLibroPagina}"/>
+                                            </p:column>
+                                            <p:column>
+                                                <f:facet name="header">
+                                                    <h:outputText value="ContenidoLibroIndice"/>
+                                                </f:facet>
+                                                <h:outputText value="#{item.contenidoLibroIndice}"/>
+                                            </p:column>
+                                           
+                                            <p:column>
+                                                <f:facet name="header">
+                                                    <h:outputText value="Recurso"/>
+                                                </f:facet>
+                                                <h:outputText value="#{item.recurso}"/>
+                                            </p:column>
+                                        </p:dataTable>
+                                    </h:form>
+                                </f:view>
+
+                            </p:panel>
+                        </p:tab>
+                        
+                         <p:dialog header="Administración de contenido" widgetVar="Dcontenido" modal="true" 
+                          showEffect="fade" hideEffect="fade" resizable="false">
+                    <h:form id="h1">
+                        <h:panelGrid columns="2" cellspacing="10px">
+                            <p:outputLabel value="Nombre" for="Nombre" />
+                            <p:inputText id="nombre" value="#{recursoController.cl.contenidoLibroPK.contenidoLibroNombre}" 
+                                         title="nombre" required="true" requiredMessage="The Idrecurso field is required."/>
+
+                            <p:outputLabel value="Pagina" for="pagina" />
+                            <p:inputText id="nombre" value="#{recursoController.cl.contenidoLibroPK.contenidoLibroPagina}" title="Nombre" required="true" requiredMessage="The Nombre field is required."/>
+
+                           <p:outputLabel for="temap" value="Tema padre" />
+                           <p:selectOneMenu id="temap" value="#{recursoController.cl.contenidoLibroIndice}" >
+                               <f:selectItems var="t" itemLabel="#{}" itemValue="#{t.}" value="#{recursoController.contenido}"/>
+                            </p:selectOneMenu>
+                    </p:wizard>
+
                 </p:dialog>
+
+
+
             </ui:define>
 
 
